# instant-karma

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
src/: config.rs  copy.rs  db.rs  key.rs  load.rs  logger.rs  main.rs  render.rs  statics.rs  view.rs  watch.rs
src/html/: copy.html  index.html  render.html
