[package]
name = "instant-karma"
version = "0.1.0"
authors = ["yasuyuky <yasuyuki.ymd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ik"
path = "src/main.rs"

[dependencies]
async-channel = "2.3.1"
async-ctrlc = "1.2.0"
async-std = {version="1.11.0", features=["attributes"]}
html-escape = "0.2.13"
notify = "6.1.1"
once_cell = "1.19.0"
pulldown-cmark = { version = "0.12.1", default-features = false, features = ["html"] }
serde = "1.0.210"
structopt = "0.3.26"
tide = "0.16.0"
toml = "0.8.19"
uuid = {version="1.10.0", features=["serde", "v4"]}
log = "0.4.22"
