[package]
name = "instant-karma"
version = "0.1.0"
authors = ["yasuyuky <yasuyuki.ymd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ik"
path = "src/main.rs"

[dependencies]
async-channel = "2.3.1"
async-ctrlc = "1.2.0"
async-std = {version="1.13.0", features=["attributes"]}
html-escape = "0.2.13"
notify = "8.0.0"
once_cell = "1.21.1"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"] }
serde = "1.0.219"
structopt = "0.3.26"
tide = "0.16.0"
toml = "0.8.20"
uuid = {version="1.15.1", features=["serde", "v4"]}
log = "0.4.26"
