[package]
name = "instant-karma"
version = "0.1.0"
authors = ["yasuyuky <yasuyuki.ymd@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ik"
path = "src/main.rs"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-async-std", "sqlite"] }
async-channel = "2.5.0"
async-ctrlc = "1.2.0"
async-std = { version = "1.13.1", features = ["attributes"] }
html-escape = "0.2.13"
notify = "8.2.0"
once_cell = "1.21.3"
pulldown-cmark = { version = "0.13.0", default-features = false, features = [
    "html"
] }
serde = "1.0.219"
structopt = "0.3.26"
tide = "0.16.0"
toml = "0.9.4"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
log = "0.4.27"
